# monlam

./: .gitignore  CHANGELOG.md  Cargo.toml
dsp/src/: main.rs
fun/: Cargo.toml
fun/src/: audio_effect.rs  audio_similarity.rs  eq_trainer.rs  equalizer.rs  main.rs  parametric_eq.rs  putlec_eq.rs
monlam/: Cargo.toml
monlam/src/: audio.rs  daw.rs  daw_audio_tests.rs  daw_state.rs  daw_state_tests.rs  lib.rs  main.rs  ui.rs
src/: audio.rs  audio_box.rs  config.rs  daw.rs  group.rs  lib.rs  main.rs  ui.rs
src/ui/: audio_box_item.rs  audio_box_panel.rs  drag_drop.rs  file_browser.rs  grid.rs  grid_item.rs  group_item.rs  group_panel.rs  main.rs  mod.rs  sample.rs
