[package]
name = "monlam"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.24.1"  # egui framework
egui = "0.24.1"   # egui core
egui_extras = "0.24.1"  # additional egui widgets
rfd = "0.12.1"  # native file dialogs
symphonia = { version = "0.5", features = ["mp3", "wav", "ogg", "flac", "isomp4", "aac", "alac"] }  # audio decoding
cpal = "0.15.2"  # low-level audio I/O
num-traits = "0.2.19"
rodio = "0.17.3"  # high-level audio playback
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
ringbuf = "0.3"
hound = "3.5.1"
